added divs for hs and time

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="hs"><a href="hs.html">View Highscores</a></div>
+  <div class="time">Time Left: <span id="time"> 150</span></div>
+
   <script src="script.js"></script>
 </body>
 </html>
