added start page div and styled it

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   <div class="hs"><a href="hs.html">View Highscores</a></div>
   <div class="time">Time Left: <span id="time"> 150</span></div>
 
+  <div class="quiz-wrapper">
+<!-- <div class="wrapper"> you will have several divs here which will appear and disappear as user takes action through clicking 
+and  interacting with the  app -->
+    <div id="start-page-div" class="start-page-div" >
+      <h1>Jake's Quiz Challenge</h1>
+      <p>
+        Try to answer the following  questions within the time
+          limit. Keep in mind that incorrect answers will penalize your
+          score/time by 10 seconds!
+      </p>
+      <button id="start-btn">Start</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
