questions related code  added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ and  interacting with the  app -->
       </p>
       <button id="start-btn">Start</button>
     </div>
+
+    <div id="questions-page-div" class="hide">
+      <h2 id="question"></h2>
+      <div id="choices" class="choices"></div>
+    </div>
+
   </div>
 
   <script src="script.js"></script>
